<resources>
    <string name="app_name">SQL_Client</string>
    <string name="nickname">Nickname</string>
    <string name="sign_up">SIGN UP</string>
    <string name="button">Button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="sign_in">Sign In</string>
    <string name="prompt_nickname_email">Nickname/Email</string>
    <string name="you_don_t_have_account_sign_up">You don\'t have account? Sign up</string>
    <string name="already_registered_sign_in">Already registered? Sign in</string>
    <string name="textview">TextView</string>
    <string name="start_game">START GAME</string>
    <string name="go_to_leaderboard">Go to Leaderboard</string>
    <string name="play_offline">PLAY OFFLINE</string>
    <string name="load">LOAD</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="settings">Settings</string>
    <string name="go_to_game_menu">GO TO GAME MENU</string>
    <string name="todo">TODO</string>
    <string name="todo_">TODO</string>
</resources>